<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/connect_logo"
        android:id="@+id/login_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_below="@id/login_logo"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_logo"
        >
    </TextView>

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_logo"
        android:text="Login"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_logo"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/mail_prof"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/login_email_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_txt"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/card_outline"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_data"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_txt"
        android:layout_marginStart="20dp"
        android:background="@drawable/card_outline"
        app:hintEnabled="false"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >

        <EditText
            android:id="@+id/login_password_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_outline"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="17sp"
            android:password="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:ignore="Deprecated" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_passwordTIL"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/forget_passwrod"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forget_password_link"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/log_in_btn"
        android:padding="4dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />




</RelativeLayout>

