<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_light_background"
    android:layoutDirection="rtl"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/connect_logo" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/mainColor"
    android:textSize="20sp"
    android:textStyle="bold"
    android:text="@string/app_name"
    android:layout_gravity="center"
    >
</TextView>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/log_in_btn"
        android:gravity="center"
        android:padding="10dp"
        android:fontFamily="@font/exo_en"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"

        />

    <Button
        android:id="@+id/database_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/exo_en"
        android:background="@drawable/log_in_btn"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/database_manage"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

</LinearLayout>